# Ascend-msprof-analyze

./: LICENSE  LICENSE.md  OWNERS  README.md  Third_Party_Open_Source_Software_Notice  setup.py  公网URL说明.md
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
advisor/: __init__.py  cluster_perf_analysis.ipynb  timeline_perf_analysis.ipynb
advisor/advisor_backend/: advice_base.py  interface.py
cluster_analyse/: README.md  cluster_analysis.py
cluster_analyse/analysis/: analysis_facade.py  communication_analysis.py  step_trace_time_analysis.py
cluster_analyse/cluster_data_preprocess/: data_preprocessor.py  pytorch_data_preprocessor.py
cluster_analyse/cluster_kernels_analysis/: README.md  cluster_op_summary_analysis.py  cluster_prof_Info_analysis.py
cluster_analyse/common_func/: constant.py  file_manager.py  path_manager.py
cluster_analyse/communication_group/: communication_group_generator.py
cluster_analyse/prof_bean/: step_trace_time_bean.py
compare_tools/: README.md  __init__.py  performance_compare.py  torch_op_compare.py
compare_tools/comparator/: index_comparator.py  op_comparator.py
compare_tools/generation/: abstract_cmp.py  base_generator.py  communication_compare_generator.py  comparison_generator.py  (+6 more)
config/: config.ini
distribute_tools/: README.md  cluster_profiling_data_copy.sh  config.json  distribute_modify_hostname.bash
merge_profiling_timeline/: README.md  main.py  trace_processor
misc/: __init__.py
misc/autofuse_performance_comparison/: CMakeLists.txt  README.md  build.sh
misc/autofuse_performance_comparison/autofuse_core/: autofuse_performance_comparison.py  execute_graph.py
misc/autofuse_performance_comparison/csrc/: execute_graph.cpp  log_manager.h
misc/autofuse_performance_comparison/utils/: constant.py  utils.py
performance_analyse/: README.md  gpu_parser.py  npu_parser.py  parser_helper.py  profiling_parse.py
requirements/: build.txt  tests.txt
test/: run_ut.py  ut_coverage.sh
(+300 files in other folders)
